Add User creation logic
